--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -45,5 +45,11 @@
     <Compile Include="LoginDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaEntidades\CapaEntidades.csproj">
+      <Project>{2a50a077-1b1a-4f81-be29-5544503ec602}</Project>
+      <Name>CapaEntidades</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
