--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -54,6 +54,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewsAdministrador\HomeAdministrador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewsAdministrador\HomeAdministrador.Designer.cs">
+      <DependentUpon>HomeAdministrador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewsEstudiante\HomeEstudiante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewsEstudiante\HomeEstudiante.Designer.cs">
+      <DependentUpon>HomeEstudiante.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewsGestor\HomeGestor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewsGestor\HomeGestor.Designer.cs">
+      <DependentUpon>HomeGestor.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +84,15 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ViewsAdministrador\HomeAdministrador.resx">
+      <DependentUpon>HomeAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewsEstudiante\HomeEstudiante.resx">
+      <DependentUpon>HomeEstudiante.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewsGestor\HomeGestor.resx">
+      <DependentUpon>HomeGestor.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,6 +105,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaEntidades\CapaEntidades.csproj">
+      <Project>{2a50a077-1b1a-4f81-be29-5544503ec602}</Project>
+      <Name>CapaEntidades</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CapaNegocios\CapaNegocios.csproj">
+      <Project>{13bb8116-b76f-4d68-9253-a775cf3db131}</Project>
+      <Name>CapaNegocios</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
