--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -60,6 +60,12 @@
     <Compile Include="ViewsAdministrador\HomeAdministrador.Designer.cs">
       <DependentUpon>HomeAdministrador.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.Designer.cs">
+      <DependentUpon>FormEstudianteVisitaCandidatas.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewsEstudiante\HomeEstudiante.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="ViewsAdministrador\HomeAdministrador.resx">
       <DependentUpon>HomeAdministrador.cs</DependentUpon>
@@ -115,6 +122,15 @@
       <Project>{13bb8116-b76f-4d68-9253-a775cf3db131}</Project>
       <Name>CapaNegocios</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Miss_Fotogenia.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BRD_Foto_MissFotogenia.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BRD_Foto_MissFCMF.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
