Creacion de las ventanas para elecciones de la reina
Se crearon las ventanas para la creacion de la reina FCMF y Miss Fotogenia, ademas se creo el menu para eleccion de que tipo de reina

--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -66,6 +66,12 @@
     <Compile Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.Designer.cs">
       <DependentUpon>FormEstudianteVisitaCandidatas.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewsEstudiante\FormPortafolioCandidata.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewsEstudiante\FormPortafolioCandidata.Designer.cs">
+      <DependentUpon>FormPortafolioCandidata.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewsEstudiante\HomeEstudiante.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,12 @@
     </Compile>
     <EmbeddedResource Include="ViewsAdministrador\HomeAdministrador.resx">
       <DependentUpon>HomeAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.resx">
+      <DependentUpon>FormEstudianteVisitaCandidatas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewsEstudiante\FormPortafolioCandidata.resx">
+      <DependentUpon>FormPortafolioCandidata.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewsEstudiante\HomeEstudiante.resx">
       <DependentUpon>HomeEstudiante.cs</DependentUpon>
