--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -108,6 +108,12 @@
     <Compile Include="ViewsAdministrador\HomeAdministrador.Designer.cs">
       <DependentUpon>HomeAdministrador.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewsAdministrador\FormGanadorasConcurso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewsAdministrador\FormGanadorasConcurso.Designer.cs">
+      <DependentUpon>FormGanadorasConcurso.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.resx">
       <DependentUpon>FormEstudianteVisitaCandidatas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewsAdministrador\FormGanadorasConcurso.resx">
+      <DependentUpon>FormGanadorasConcurso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewsEstudiante\FormPortafolioCandidata.resx">
       <DependentUpon>FormPortafolioCandidata.cs</DependentUpon>
