--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -90,6 +90,12 @@
     <Compile Include="ViewsAdministrador\FormFotoAdmin.Designer.cs">
       <DependentUpon>FormFotoAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewsAdministrador\FormGanadoraFotogenia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewsAdministrador\FormGanadoraFotogenia.Designer.cs">
+      <DependentUpon>FormGanadoraFotogenia.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewsAdministrador\FormPerfilUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,11 +114,11 @@
     <Compile Include="ViewsAdministrador\HomeAdministrador.Designer.cs">
       <DependentUpon>HomeAdministrador.cs</DependentUpon>
     </Compile>
-    <Compile Include="ViewsAdministrador\FormGanadorasConcurso.cs">
+    <Compile Include="ViewsAdministrador\FormGanadoraReina.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ViewsAdministrador\FormGanadorasConcurso.Designer.cs">
-      <DependentUpon>FormGanadorasConcurso.cs</DependentUpon>
+    <Compile Include="ViewsAdministrador\FormGanadoraReina.Designer.cs">
+      <DependentUpon>FormGanadoraReina.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.cs">
       <SubType>Form</SubType>
@@ -191,6 +197,9 @@
     <EmbeddedResource Include="ViewsAdministrador\FormFotoAdmin.resx">
       <DependentUpon>FormFotoAdmin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ViewsAdministrador\FormGanadoraFotogenia.resx">
+      <DependentUpon>FormGanadoraFotogenia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewsAdministrador\FormPerfilUsuario.resx">
       <DependentUpon>FormPerfilUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -203,8 +212,8 @@
     <EmbeddedResource Include="ViewsEstudiante\FormEstudianteVisitaCandidatas.resx">
       <DependentUpon>FormEstudianteVisitaCandidatas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ViewsAdministrador\FormGanadorasConcurso.resx">
-      <DependentUpon>FormGanadorasConcurso.cs</DependentUpon>
+    <EmbeddedResource Include="ViewsAdministrador\FormGanadoraReina.resx">
+      <DependentUpon>FormGanadoraReina.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewsEstudiante\FormPortafolioCandidata.resx">
       <DependentUpon>FormPortafolioCandidata.cs</DependentUpon>
