Creacion de la funcionalidad Comentario

--- a/CapaEntidades/CapaEntidades.csproj
+++ b/CapaEntidades/CapaEntidades.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="candidata.cs" />
+    <Compile Include="foto.cs" />
+    <Compile Include="idEstudiante.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
