--- a/CapaEntidades/CapaEntidades.csproj
+++ b/CapaEntidades/CapaEntidades.csproj
@@ -44,6 +44,7 @@
     <Compile Include="candidata.cs" />
     <Compile Include="foto.cs" />
     <Compile Include="idEstudiante.cs" />
+    <Compile Include="setCombos.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
